--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -13,35 +13,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Windows
-          - os: windows
-            arch: x64
-            runner: windows-latest
-          - os: windows
-            arch: x86
-            runner: windows-latest
-          
-          # macOS
-          - os: macos
-            arch: armv8
-            runner: macos-15
-          - os: macos
-            arch: x86_64
-            runner: macos-15
-
-          # Linux
-          - os: linux
-            arch: x86_64
-            runner: ubuntu-latest
-          - os: linux
-            arch: i386
-            runner: ubuntu-latest
-          - os: linux
-            arch: aarch64
-            runner: ubuntu-latest
-          - os: linux
-            arch: armv7
-            runner: ubuntu-latest
+          - os: windows, arch: x64, runner: windows-latest
+          - os: windows, arch: x86, runner: windows-latest
+          - os: macos, arch: armv8, runner: macos-15
+          - os: macos, arch: x86_64, runner: macos-15
+          - os: linux, arch: x86_64, runner: ubuntu-latest
+          - os: linux, arch: i386, runner: ubuntu-latest
+          - os: linux, arch: aarch64, runner: ubuntu-latest
+          - os: linux, arch: armv7, runner: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -55,40 +34,62 @@ jobs:
       - name: Install Conan
         run: pip install conan
 
-      # --- KOMPILACJA WINDOWS ---
+      # --- WINDOWS ---
       - name: Build Windows
         if: matrix.os == 'windows'
         shell: cmd
         run: |
-          conan profile detect --force
-          :: Ręczne dopisanie standardu i architektury do pliku profilu
-          echo compiler.cppstd=17 >> %USERPROFILE%\.conan2\profiles\default
-          echo arch=${{ matrix.arch == 'x64' && 'x86_64' || 'x86' }} > %USERPROFILE%\.conan2\profiles\default_temp
-          :: Łączymy wykryty profil z naszymi poprawkami
-          type %USERPROFILE%\.conan2\profiles\default >> %USERPROFILE%\.conan2\profiles\default_temp
-          move /y %USERPROFILE%\.conan2\profiles\default_temp %USERPROFILE%\.conan2\profiles\default
+          if not exist %USERPROFILE%\.conan2\profiles mkdir %USERPROFILE%\.conan2\profiles
+          (
+          echo [settings]
+          echo arch=${{ matrix.arch == 'x64' && 'x86_64' || 'x86' }}
+          echo build_type=Release
+          echo compiler=msvc
+          echo compiler.cppstd=17
+          echo compiler.runtime=dynamic
+          echo compiler.runtime_type=Release
+          echo compiler.version=193
+          echo os=Windows
+          ) > %USERPROFILE%\.conan2\profiles\default
           call build-conan.cmd
 
-      # --- KOMPILACJA MACOS ---
+      # --- MACOS ---
       - name: Build macOS
         if: matrix.os == 'macos'
         run: |
-          conan profile detect --force
-          echo "compiler.cppstd=17" >> ~/.conan2/profiles/default
-          sed -i '' 's/arch=.*/arch=${{ matrix.arch }}/' ~/.conan2/profiles/default
+          mkdir -p ~/.conan2/profiles
+          cat <<EOF > ~/.conan2/profiles/default
+          [settings]
+          arch=${{ matrix.arch }}
+          build_type=Release
+          compiler=apple-clang
+          compiler.cppstd=gnu17
+          compiler.libcxx=libc++
+          compiler.version=15
+          os=Macos
+          EOF
           chmod +x build-conan.sh
           ./build-conan.sh
 
-      # --- KOMPILACJA LINUX (x86_64) ---
+      # --- LINUX STANDARD (x86_64) ---
       - name: Build Linux Standard
         if: matrix.os == 'linux' && matrix.arch == 'x86_64'
         run: |
-          conan profile detect --force
-          echo "compiler.cppstd=17" >> ~/.conan2/profiles/default
+          mkdir -p ~/.conan2/profiles
+          cat <<EOF > ~/.conan2/profiles/default
+          [settings]
+          arch=x86_64
+          build_type=Release
+          compiler=gcc
+          compiler.cppstd=gnu17
+          compiler.libcxx=libstdc++11
+          compiler.version=11
+          os=Linux
+          EOF
           chmod +x build-conan.sh
           ./build-conan.sh
 
-      # --- KOMPILACJA LINUX (i386, ARM) ---
+      # --- LINUX CROSS-ARCH (ARM, i386) ---
       - name: Build Linux Cross-Arch
         if: matrix.os == 'linux' && matrix.arch != 'x86_64'
         uses: uraimo/run-on-arch-action@v2
@@ -102,28 +103,34 @@ jobs:
             apt-get install -y build-essential cmake python3-pip make g++
             pip3 install conan
           run: |
-            conan profile detect --force
-            echo "compiler.cppstd=17" >> /root/.conan2/profiles/default
+            mkdir -p /root/.conan2/profiles
+            cat <<EOF > /root/.conan2/profiles/default
+            [settings]
+            arch=${{ matrix.arch == 'aarch64' && 'armv8' || (matrix.arch == 'armv7' && 'armv7' || 'x86') }}
+            build_type=Release
+            compiler=gcc
+            compiler.cppstd=gnu17
+            compiler.libcxx=libstdc++11
+            compiler.version=11
+            os=Linux
+            EOF
             chmod +x build-conan.sh
-            # Poprawka dla emulacji (Segfault przy zbyt wielu wątkach)
             sed -i 's/cmake --build ./cmake --build . -- -j2/g' build-conan.sh
             ./build-conan.sh
 
-      # --- PAKOWANIE ---
-      - name: Package Artifacts
+      # --- ARTEFAKTY ---
+      - name: Package & Upload
         shell: bash
         run: |
           DATE=$(date +'%Y.%m.%d')
           mkdir -p dist
           if [ "${{ matrix.os }}" = "windows" ]; then
-            TARGET_NAME="RetroSLM_${DATE}_win_${{ matrix.arch }}.exe"
-            cp output/RetroSLM.exe dist/${TARGET_NAME} || cp build/Release/RetroSLM.exe dist/${TARGET_NAME}
+            cp output/RetroSLM.exe dist/RetroSLM_${DATE}_win_${{ matrix.arch }}.exe
           else
-            TARGET_NAME="RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix.arch }}"
-            cp output/RetroSLM dist/${TARGET_NAME} || cp build/RetroSLM dist/${TARGET_NAME}
+            cp output/RetroSLM dist/RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix.arch }}
           fi
-
-      - name: Upload Artifacts
+      
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: RetroSLM-${{ matrix.os }}-${{ matrix.arch }}
@@ -133,26 +140,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: success() && (github.event_name == 'workflow_dispatch' || github.event_name == 'schedule')
-    permissions:
-      contents: write
+    permissions: { contents: write }
     steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: ./release-files
-          merge-multiple: true
-
-      - name: Get current datetime
-        id: datetime
+      - uses: actions/download-artifact@v4
+        with: { path: ./release-files, merge-multiple: true }
+      - id: dt
         run: echo "now=$(date +'%Y.%m.%d %H:%M')" >> $GITHUB_OUTPUT
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v2
+      - uses: softprops/action-gh-release@v2
         with:
           tag_name: nightly-${{ github.run_number }}
-          name: "Build: ${{ steps.datetime.outputs.now }}"
-          body: "Automatyczny build RetroSLM (C++17)."
-          prerelease: true
+          name: "Build: ${{ steps.dt.outputs.now }}"
           files: ./release-files/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
